manifests/apps/fetch-api/fetch_api/fetch-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetch-api
  namespace: fetch-api
  labels:
    app: fetch-api
    env: home
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: fetch-api
  template:
    metadata:
      labels:
        app: fetch-api
        env: home
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-fetch-api
      volumes:
        - name: script-health-probe
          configMap:
            name: script-health-probe
            defaultMode: 0755
        - name: fleet-api
          persistentVolumeClaim:
            claimName: fetch-api-fleet
        - name: fleet-api-private-key
          secret:
            secretName: fleet-api-private-key
            items:
              - key: private-key
                path: private-key
        - name: fleet-api-public-key
          configMap:
            name: data-fleet-api
            items:
              - key: public-key.pem
                path: public-key.pem
      containers:
        - name: fetch-api
          image: ghcr.io/dragon699/fetch-api/fetch-api:0.19.10
          imagePullPolicy: Always
          volumeMounts:
            - name: script-health-probe
              mountPath: /home/health-probe.py
              subPath: health-probe.py
            - name: fleet-api
              mountPath: /app/fleet-api
            - name: fleet-api-private-key
              mountPath: /app/fleet-api/private
              readOnly: true
            - name: fleet-api-public-key
              mountPath: /app/fleet-api/public
              readOnly: true
          ports:
            - containerPort: 8069
          command: ["python", "-m", "fetch_api.app"]
          livenessProbe:
            exec:
              command:
                - python
                - /home/health-probe.py
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
